--- a/mbdyn/NEWS
+++ b/mbdyn/NEWS
@@ -9,6 +9,8 @@ Pierangelo Masarati     <masarati@aero.polimi.it>
 Paolo Mantegazza        <mantegazza@aero.polimi.it>
 
 
+* Jan 18, 2012: release of MBDyn 1.4.3
+
 * Jan 09, 2012: release of MBDyn 1.4.2
 
 * Dec 11, 2011: release of MBDyn 1.4.1
