add support for displacement nodes; add membrane element (Morandini & Solcia)

--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -12,6 +12,8 @@ Paolo Mantegazza        <mantegazza@aero.polimi.it>
 MBDyn 1.X-Devel
 	Enhancements:
 		- added screw joint (Mauro Manetti & Marco Morandini)
+		- added displacement-only nodes and selected basic elements
+		- added membrane element (Marco Morandini & Tommaso Solcia)
 	Backward compatibility issues:
 	Known issues:
 		- Schur solver is broken
