--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -20,6 +20,7 @@ MBDyn 1.X-Devel
 		- TotalPinJoint inverse dynamics support is broken
 		- RTAI and multithread support incompatible
 	Bug fixes:
+		- fix output file name ext. issue (noted by Jens van Schelve)
 
 MBDyn 1.4.3
 	Enhancements:
