--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -14,6 +14,7 @@ MBDyn 1.X-Devel
 		- added screw joint (Mauro Manetti & Marco Morandini)
 		- added displacement-only nodes and selected basic elements
 		- added membrane element (Marco Morandini & Tommaso Solcia)
+		- added continuous contact constitutive law (Matteo Fancello)
 	Backward compatibility issues:
 	Known issues:
 		- Schur solver is broken
