--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -28,6 +28,7 @@ MBDyn 1.X-Devel
 		- fix totalj rel. rot. priv data (noted by Jens van Schelve)
 		- fix beam default output (noted by Reinhard Resch)
 		- fix linear/angular acceleration joint initialization
+		- fix initial assembly required by userelem (Reinhard Resch)
 
 MBDyn 1.4.3
 	Enhancements:
