--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -19,7 +19,7 @@ MBDyn 1.X-Devel
 		- added "other" specifier to total pin joint input
 		- added dof stats output to file (Reinhard Resch)
 		- added '-E' to enable fpe checking
-		- added octave drive caller module-octave (Reinhard Resch)
+		- added module-octave (Reinhard Resch)
 		- drive drive made differentiable (Reinhard Resch)
 	Backward compatibility issues:
 	Known issues:
