--- a/mbdyn/manual/input/nodes.tex
+++ b/mbdyn/manual/input/nodes.tex
@@ -150,8 +150,8 @@ from the momentum and the momenta moment derivatives through the inertia
 properties associated to dynamic nodes.
 
 The keyword \kw{accelerations} can be used for \kw{dummy} nodes;
-however, the dummy node will compute and output the acceleration 
-only if the node it is connected to can provide it.
+however, the dummy node will compute and output the linear and angular accelerations
+only if the node it is connected to can provide them.
 
 Accelerations output can be controlled by means of the
 \hyperref{\kw{default output} statement}{\kw{default output} statement (see Section~}{)}{sec:CONTROLDATA:DEFAULTOUTPUT}.
