added "m" (mass) to body private data (Louis Gagnon)

--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -21,6 +21,7 @@ MBDyn 1.X-Devel
 		- added '-E' to enable fpe checking
 		- added module-octave (Reinhard Resch)
 		- drive drive made differentiable (Reinhard Resch)
+		- added "m" (mass) to body private data (Louis Gagnon)
 	Backward compatibility issues:
 	Known issues:
 		- Schur solver is broken
