--- a/mbdyn/manual/input/input.tex
+++ b/mbdyn/manual/input/input.tex
@@ -233,8 +233,9 @@ in the latest release but not yet documented in that release's manual.
 \input{elements}
 
 \appendix
-\input{netcdfout}
 \input{modal-fem-format}
+\input{modules}
+\input{netcdfout}
 \input{outputresults} 
 \input{logfile} 
 \input{faq}
